@@ -37,8 +37,9 @@ Usage and Other Information
 ===========================
 See the index.txt file in the "doc" directory.
 The *.txt files in the "doc" directory are written in reStructedText. If
-you have rst2html installed (part of the docutils suite) you can convert
-these to HTML by running "make html" in the "doc" directory.
+you have Sphinx installed, you can convert these to HTML by running
+  $ python setup.py build_doc
+from the top of the release directory.
 
 
 For Developers
